--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_API_URL="https://bhaskar-bist.great-site.net/api";
+VITE_API_BASE_URL=https://bhaskar-portfolio-backend-9vs7.onrender.com/api/portfolio
