--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL=https://bhaskar-portfolio-backend-9vs7.onrender.com/api/portfolio
+VITE_API_BASE_URL=http://localhost:5000/api/portfolio
+# VITE_API_BASE_URL=https://bhaskar-portfolio-backend-9vs7.onrender.com/api/portfolio
